--- a/style.css
+++ b/style.css
@@ -170,3 +170,24 @@ footer {
   text-align: center;
   color: #2c5e3a;
 }
+.subhead {
+  margin-top: 2rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 1.5rem;
+  color: #387447;
+  text-align: center;
+}
+
+.wisdom-list {
+  list-style: none;
+  max-width: 800px;
+  margin: 1rem auto;
+  padding-left: 0;
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+.wisdom-list li {
+  margin: 0.5rem 0;
+  text-align: left;
+}
